chore: use package.json import alias (#352)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"license": "MIT",
 	"sideEffects": false,
 	"type": "module",
+	"imports": {
+		"#*": "./*"
+	},
 	"scripts": {
 		"build": "npm run typecheck && remix vite:build",
 		"clean": "./scripts/clean.js",
@@ -20,26 +23,63 @@
 		"knip": "knip-bun"
 	},
 	"dependencies": {
-		"@mcansh/http-helmet": "0.10.3",
-		"@mcansh/remix-fastify": "3.4.0",
-		"@remix-run/node": "2.11.2",
-		"@remix-run/react": "2.11.2",
-		"@remix-run/server-runtime": "2.11.2",
+		"@mcansh/http-helmet": "^0.11.1",
+		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@428",
+		"@remix-run/node": "^2.12.1",
+		"@remix-run/react": "^2.12.1",
+		"@remix-run/server-runtime": "^2.12.1",
 		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"etag": "^1.8.1",
-		"fastify": "^4.28.1",
+		"fastify": "^5.0.0",
 		"fathom-client": "^3.7.2",
 		"isbot": "^5.1.17",
-		"playwright": "^1.46.1",
+		"playwright": "^1.48.0",
 		"pretty-cache-header": "^1.0.0",
-		"react": "19.0.0-rc-dfd30974ab-20240613",
-		"react-dom": "19.0.0-rc-dfd30974ab-20240613",
-		"remix-utils": "7.6.0",
-		"tailwind-merge": "^2.5.2",
+		"react": "19.0.0-rc-ed966dac-20241007",
+		"react-dom": "19.0.0-rc-ed966dac-20241007",
+		"remix-utils": "^7.7.0",
+		"tailwind-merge": "^2.5.3",
 		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@cld-apis/types": "^0.1.6",
+		"@mcansh/vite-svg-sprite-plugin": "^0.4.2",
+		"@remix-run/dev": "^2.12.1",
+		"@total-typescript/tsconfig": "^1.0.4",
+		"@types/etag": "^1.8.3",
+		"@types/react": "npm:types-react@19.0.0-alpha.3",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
+		"@typescript-eslint/eslint-plugin": "^8.8.1",
+		"@typescript-eslint/parser": "^8.8.1",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.169",
+		"autoprefixer": "^10.4.20",
+		"del": "^8.0.0",
+		"eslint": "^8.57.0",
+		"eslint-import-resolver-typescript": "^3.6.3",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-prefer-let": "^4.0.0",
+		"gitignore-fs": "^2.2.2",
+		"glob": "^11.0.0",
+		"husky": "^9.1.6",
+		"knip": "^5.33.2",
+		"lightningcss": "^1.27.0",
+		"lint-staged": "^15.2.10",
+		"micromatch": "^4.0.8",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.47",
+		"postcss-100vh-fix": "^1.0.2",
+		"precinct": "^12.1.2",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"rollup-plugin-visualizer": "^5.12.0",
+		"simple-git": "^3.27.0",
+		"tailwindcss": "^3.4.13",
+		"tailwindcss-padding-safe": "^1.0.6",
+		"typescript": "^5.6.3",
+		"vite": "^5.4.8"
 	},
 	"pnpm": {
 		"overrides": {
@@ -49,45 +89,8 @@
 			"react-dom": "$react-dom"
 		}
 	},
-	"devDependencies": {
-		"@cld-apis/types": "^0.1.6",
-		"@mcansh/vite-svg-sprite-plugin": "0.4.2",
-		"@remix-run/dev": "2.11.2",
-		"@types/etag": "^1.8.3",
-		"@types/react": "npm:types-react@19.0.0-alpha.3",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
-		"@typescript-eslint/eslint-plugin": "^8.2.0",
-		"@typescript-eslint/parser": "^8.2.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.155",
-		"autoprefixer": "^10.4.20",
-		"del": "^7.1.0",
-		"eslint": "^8.57.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-prefer-let": "^4.0.0",
-		"gitignore-fs": "^2.2.2",
-		"glob": "^11.0.0",
-		"husky": "^9.1.5",
-		"knip": "^5.27.3",
-		"lightningcss": "^1.26.0",
-		"lint-staged": "^15.2.9",
-		"micromatch": "^4.0.7",
-		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.41",
-		"postcss-100vh-fix": "^1.0.2",
-		"precinct": "^12.1.2",
-		"prettier": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.6",
-		"rollup-plugin-visualizer": "^5.12.0",
-		"simple-git": "^3.25.0",
-		"tailwindcss": "^3.4.10",
-		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "^5.5.4",
-		"vite": "5.4.6",
-		"vite-tsconfig-paths": "^5.0.1"
-	},
 	"engines": {
 		"node": ">=18"
 	},
-	"packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276"
+	"packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
 }
