--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
 	"scripts": {
 		"build": "npm run typecheck && remix vite:build",
 		"clean": "./scripts/clean.js",
-		"typecheck": "node ./scripts/cli.js typecheck",
-		"lint": "node ./scripts/cli.js lint",
+		"deploy": "wrangler deploy",
+		"dev": "remix vite:dev",
 		"format": "node ./scripts/cli.js format",
-		"validate": "run-p lint format typecheck",
+		"knip": "knip-bun",
+		"lint": "node ./scripts/cli.js lint",
 		"prepare": "node ./scripts/prepare.js",
-		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
-		"start": "cross-env NODE_ENV=production node ./server.js",
-		"knip": "knip-bun"
+		"start": "wrangler dev",
+		"typecheck": "node ./scripts/cli.js typecheck",
+		"typegen": "wrangler types",
+		"validate": "run-p lint format typecheck"
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.11.1",
-		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@428",
-		"@remix-run/node": "^2.12.1",
+		"@remix-run/cloudflare": "^2.12.1",
+		"@remix-run/cloudflare-workers": "^2.12.1",
 		"@remix-run/react": "^2.12.1",
 		"@remix-run/server-runtime": "^2.12.1",
-		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"etag": "^1.8.1",
-		"fastify": "^5.0.0",
 		"fathom-client": "^3.7.2",
 		"isbot": "^5.1.17",
 		"playwright": "^1.48.0",
@@ -79,7 +79,8 @@
 		"tailwindcss": "^3.4.13",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.6.3",
-		"vite": "^5.4.8"
+		"vite": "^5.4.8",
+		"wrangler": "^3.80.3"
 	},
 	"pnpm": {
 		"overrides": {
