--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,25 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
-      - uses: actions/checkout@v4
-      - name: Deploy
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        - name: ⬇️ Checkout repo
+          uses: actions/checkout@v4
+
+        - name: ⎔ Enable corepack
+          run: corepack enable
+
+        - name: ⎔ Setup node
+          uses: actions/setup-node@v4
+          with:
+            node-version: 20
+            cache: "pnpm"
+
+        - name: 🟧 Install dependencies
+          run: pnpm install --recursive --frozen-lockfile --strict-peer-dependencies
+
+        - name: 📦 Build
+          run: pnpm run build
+      
+        - name: Deploy
+          uses: cloudflare/wrangler-action@v3
+          with:
+            apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
