--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,25 +10,26 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
-        - name: ⬇️ Checkout repo
-          uses: actions/checkout@v4
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v4
 
-        - name: ⎔ Enable corepack
-          run: corepack enable
+      - name: ⎔ Enable corepack
+        run: corepack enable
 
-        - name: ⎔ Setup node
-          uses: actions/setup-node@v4
-          with:
-            node-version: 20
-            cache: "pnpm"
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
 
-        - name: 🟧 Install dependencies
-          run: pnpm install --recursive --frozen-lockfile --strict-peer-dependencies
+      - name: 🟧 Install dependencies
+        run: pnpm install --recursive --frozen-lockfile --strict-peer-dependencies
 
-        - name: 📦 Build
-          run: pnpm run build
-      
-        - name: Deploy
-          uses: cloudflare/wrangler-action@v3
-          with:
-            apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      - name: 📦 Build
+        run: pnpm run build
+
+      - name: Deploy
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
