--- a/package.json
+++ b/package.json
@@ -25,36 +25,36 @@
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.11.1",
 		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@428",
-		"@remix-run/node": "^2.12.1",
-		"@remix-run/react": "^2.12.1",
-		"@remix-run/server-runtime": "^2.12.1",
+		"@remix-run/node": "^2.13.1",
+		"@remix-run/react": "^2.13.1",
+		"@remix-run/server-runtime": "^2.13.1",
 		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"etag": "^1.8.1",
-		"fastify": "^5.0.0",
+		"fastify": "^5.1.0",
 		"fathom-client": "^3.7.2",
 		"isbot": "^5.1.17",
-		"playwright": "^1.48.0",
+		"playwright": "^1.48.2",
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc-ed966dac-20241007",
 		"react-dom": "19.0.0-rc-ed966dac-20241007",
 		"remix-utils": "^7.7.0",
-		"tailwind-merge": "^2.5.3",
+		"tailwind-merge": "^2.5.4",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@mcansh/vite-plugin-svg-sprite": "0.0.0-experimental-3b96418",
-		"@remix-run/dev": "^2.12.1",
+		"@mcansh/vite-plugin-svg-sprite": "0.5.0",
+		"@remix-run/dev": "^2.13.1",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/etag": "^1.8.3",
 		"@types/react": "npm:types-react@19.0.0-alpha.3",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
-		"@typescript-eslint/eslint-plugin": "^8.8.1",
-		"@typescript-eslint/parser": "^8.8.1",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.169",
+		"@typescript-eslint/eslint-plugin": "^8.12.2",
+		"@typescript-eslint/parser": "^8.12.2",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.176",
 		"autoprefixer": "^10.4.20",
 		"del": "^8.0.0",
 		"eslint": "^8.57.0",
@@ -64,7 +64,7 @@
 		"gitignore-fs": "^2.2.2",
 		"glob": "^11.0.0",
 		"husky": "^9.1.6",
-		"knip": "^5.33.2",
+		"knip": "^5.36.2",
 		"lightningcss": "^1.27.0",
 		"lint-staged": "^15.2.10",
 		"micromatch": "^4.0.8",
@@ -76,10 +76,10 @@
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"simple-git": "^3.27.0",
-		"tailwindcss": "^3.4.13",
+		"tailwindcss": "^3.4.14",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.6.3",
-		"vite": "^5.4.8"
+		"vite": "^5.4.10"
 	},
 	"pnpm": {
 		"overrides": {
@@ -92,5 +92,5 @@
 	"engines": {
 		"node": ">=18"
 	},
-	"packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
+	"packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
