chore(deps): bump other dependencies to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -32,30 +32,29 @@
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"etag": "^1.8.1",
-		"fastify": "^5.0.0",
+		"fastify": "^5.1.0",
 		"fathom-client": "^3.7.2",
 		"isbot": "^5.1.17",
-		"playwright": "^1.48.0",
+		"playwright": "^1.48.2",
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc-ed966dac-20241007",
 		"react-dom": "19.0.0-rc-ed966dac-20241007",
 		"react-router": "7.0.0-pre.5",
 		"remix-utils": "^7.7.0",
-		"tailwind-merge": "^2.5.3",
+		"tailwind-merge": "^2.5.4",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@mcansh/vite-svg-sprite-plugin": "^0.4.2",
+		"@mcansh/vite-svg-sprite-plugin": "^0.5.0",
 		"@react-router/dev": "7.0.0-pre.5",
-		"@remix-run/dev": "^2.12.1",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/etag": "^1.8.3",
-		"@types/react": "npm:types-react@19.0.0-rc.1",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-		"@typescript-eslint/eslint-plugin": "^8.8.1",
-		"@typescript-eslint/parser": "^8.8.1",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.169",
+		"@types/react": "npm:types-react@19.0.0-alpha.3",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
+		"@typescript-eslint/eslint-plugin": "^8.13.0",
+		"@typescript-eslint/parser": "^8.13.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.178",
 		"autoprefixer": "^10.4.20",
 		"del": "^8.0.0",
 		"eslint": "^8.57.0",
@@ -65,8 +64,8 @@
 		"gitignore-fs": "^2.2.2",
 		"glob": "^11.0.0",
 		"husky": "^9.1.6",
-		"knip": "^5.33.2",
-		"lightningcss": "^1.27.0",
+		"knip": "^5.36.3",
+		"lightningcss": "^1.28.1",
 		"lint-staged": "^15.2.10",
 		"micromatch": "^4.0.8",
 		"npm-run-all": "^4.1.5",
@@ -76,10 +75,10 @@
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"simple-git": "^3.27.0",
-		"tailwindcss": "^3.4.13",
+		"tailwindcss": "^3.4.14",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "^5.6.3",
-		"vite": "^5.4.8"
+		"vite": "^5.4.10"
 	},
 	"pnpm": {
 		"overrides": {
