feat: React Router v7 (#347)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"#*": "./*"
 	},
 	"scripts": {
-		"build": "npm run typecheck && remix vite:build",
+		"build": "npm run typecheck && react-router build",
 		"clean": "./scripts/clean.js",
 		"typecheck": "node ./scripts/cli.js typecheck",
 		"lint": "node ./scripts/cli.js lint",
@@ -24,11 +24,10 @@
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.11.1",
-		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@428",
-		"@remix-run/node": "^2.13.1",
-		"@remix-run/react": "^2.13.1",
-		"@remix-run/server-runtime": "^2.13.1",
+		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@459",
+		"@react-router/node": "7.0.0-pre.5",
 		"address": "^2.0.3",
+		"change-case": "^5.4.4",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
@@ -40,21 +39,22 @@
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc-ed966dac-20241007",
 		"react-dom": "19.0.0-rc-ed966dac-20241007",
+		"react-router": "7.0.0-pre.5",
 		"remix-utils": "^7.7.0",
 		"tailwind-merge": "^2.5.4",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@mcansh/vite-plugin-svg-sprite": "0.5.0",
-		"@remix-run/dev": "^2.13.1",
+		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
+		"@react-router/dev": "7.0.0-pre.5",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/etag": "^1.8.3",
 		"@types/react": "npm:types-react@19.0.0-alpha.3",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
-		"@typescript-eslint/eslint-plugin": "^8.12.2",
-		"@typescript-eslint/parser": "^8.12.2",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.176",
+		"@typescript-eslint/eslint-plugin": "^8.13.0",
+		"@typescript-eslint/parser": "^8.13.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.178",
 		"autoprefixer": "^10.4.20",
 		"del": "^8.0.0",
 		"eslint": "^8.57.0",
@@ -64,14 +64,13 @@
 		"gitignore-fs": "^2.2.2",
 		"glob": "^11.0.0",
 		"husky": "^9.1.6",
-		"knip": "^5.36.2",
-		"lightningcss": "^1.27.0",
+		"knip": "^5.36.3",
+		"lightningcss": "^1.28.1",
 		"lint-staged": "^15.2.10",
 		"micromatch": "^4.0.8",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.47",
 		"postcss-100vh-fix": "^1.0.2",
-		"precinct": "^12.1.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"rollup-plugin-visualizer": "^5.12.0",
@@ -86,7 +85,8 @@
 			"@types/react": "$@types/react",
 			"@types/react-dom": "$@types/react-dom",
 			"react": "$react",
-			"react-dom": "$react-dom"
+			"react-dom": "$react-dom",
+			"react-router-dom": "$react-router"
 		}
 	},
 	"engines": {
