--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"etag": "^1.8.1",
 		"fastify": "^5.1.0",
 		"fathom-client": "^3.7.2",
+		"get-port": "^7.1.0",
 		"isbot": "^5.1.17",
 		"playwright": "^1.48.2",
 		"pretty-cache-header": "^1.0.0",
