chore(deps): update React and React DOM to latest rc
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
 		"isbot": "^5.1.17",
 		"playwright": "^1.48.2",
 		"pretty-cache-header": "^1.0.0",
-		"react": "19.0.0-rc-ed966dac-20241007",
-		"react-dom": "19.0.0-rc-ed966dac-20241007",
+		"react": "19.0.0-rc.1",
+		"react-dom": "19.0.0-rc.1",
 		"react-router": "7.0.0-pre.5",
 		"remix-utils": "^7.7.0",
 		"tailwind-merge": "^2.5.4",
@@ -51,8 +51,8 @@
 		"@react-router/dev": "7.0.0-pre.5",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/etag": "^1.8.3",
-		"@types/react": "npm:types-react@19.0.0-alpha.3",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
+		"@types/react": "npm:types-react@19.0.0-rc.1",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
 		"@typescript-eslint/eslint-plugin": "^8.13.0",
 		"@typescript-eslint/parser": "^8.13.0",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.178",
