--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-/node_modules
+/node_modules/
 *.log
 .DS_Store
-/.cache
-/build
-/public/build
+/.cache/
+/build/
+/public/build/
 .eslintcache
 tsconfig.tsbuildinfo
 .env
