--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
 		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@459",
 		"@react-router/node": "7.0.1",
 		"address": "^2.0.3",
-		"change-case": "^5.4.4",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
@@ -47,36 +46,37 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
+		"@eslint/compat": "^1.2.3",
+		"@eslint/js": "^9.15.0",
 		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
 		"@react-router/dev": "7.0.1",
 		"@tailwindcss/vite": "4.0.0-beta.2",
 		"@total-typescript/tsconfig": "^1.0.4",
+		"@types/eslint__js": "^8.42.3",
 		"@types/etag": "^1.8.3",
 		"@types/react": "npm:types-react@19.0.0-rc.1",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-		"@typescript-eslint/eslint-plugin": "^8.13.0",
-		"@typescript-eslint/parser": "^8.13.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.178",
+		"@typescript-eslint/eslint-plugin": "^8.14.0",
+		"@typescript-eslint/parser": "^8.14.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.179",
 		"autoprefixer": "^10.4.20",
-		"del": "^8.0.0",
-		"eslint": "^8.57.0",
+		"eslint": "^9.14.0",
 		"eslint-import-resolver-typescript": "^3.6.3",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-prefer-let": "^4.0.0",
-		"gitignore-fs": "^2.2.2",
-		"glob": "^11.0.0",
+		"globify-gitignore": "^1.0.3",
 		"husky": "^9.1.6",
-		"knip": "^5.36.3",
+		"knip": "^5.37.1",
 		"lightningcss": "^1.28.1",
 		"lint-staged": "^15.2.10",
 		"micromatch": "^4.0.8",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"simple-git": "^3.27.0",
 		"tailwindcss": "4.0.0-beta.2",
 		"typescript": "^5.6.3",
-		"vite": "^5.4.10"
+		"typescript-eslint": "^8.14.0",
+		"vite": "^5.4.11"
 	},
 	"pnpm": {
 		"overrides": {
@@ -90,5 +90,5 @@
 	"engines": {
 		"node": ">=18"
 	},
-	"packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
+	"packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
 }
