--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.11.1",
 		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@459",
-		"@react-router/node": "7.0.0-pre.5",
+		"@react-router/node": "7.0.1",
 		"address": "^2.0.3",
 		"change-case": "^5.4.4",
 		"cloudinary-build-url": "^0.2.4",
@@ -40,7 +40,7 @@
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc.1",
 		"react-dom": "19.0.0-rc.1",
-		"react-router": "7.0.0-pre.5",
+		"react-router": "7.0.1",
 		"remix-utils": "^7.7.0",
 		"tailwind-merge": "^2.5.4",
 		"zod": "^3.23.8"
@@ -48,7 +48,8 @@
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
-		"@react-router/dev": "7.0.0-pre.5",
+		"@react-router/dev": "7.0.1",
+		"@tailwindcss/vite": "4.0.0-beta.2",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/etag": "^1.8.3",
 		"@types/react": "npm:types-react@19.0.0-rc.1",
@@ -70,14 +71,10 @@
 		"lint-staged": "^15.2.10",
 		"micromatch": "^4.0.8",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.47",
-		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"rollup-plugin-visualizer": "^5.12.0",
 		"simple-git": "^3.27.0",
-		"tailwindcss": "^3.4.14",
-		"tailwindcss-padding-safe": "^1.0.6",
+		"tailwindcss": "4.0.0-beta.2",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.10"
 	},
