--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"typecheck": "node ./scripts/cli.js typecheck",
 		"lint": "node ./scripts/cli.js lint",
 		"format": "node ./scripts/cli.js format",
-		"validate": "run-p lint format typecheck",
+		"validate": "pnpm run --recursive lint format typecheck",
 		"prepare": "node ./scripts/prepare.js",
 		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
 		"start": "cross-env NODE_ENV=production node ./server.js",
@@ -70,7 +70,6 @@
 		"lightningcss": "^1.28.1",
 		"lint-staged": "^15.2.10",
 		"micromatch": "^4.0.8",
-		"npm-run-all": "^4.1.5",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"simple-git": "^3.27.0",
