--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.11.1",
-		"@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@459",
+		"@mcansh/remix-fastify": "^4.0.3",
 		"@react-router/node": "7.0.1",
 		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
@@ -35,7 +35,7 @@
 		"fathom-client": "^3.7.2",
 		"get-port": "^7.1.0",
 		"isbot": "^5.1.17",
-		"playwright": "^1.48.2",
+		"playwright": "^1.49.0",
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc.1",
 		"react-dom": "19.0.0-rc.1",
@@ -58,22 +58,22 @@
 		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
 		"@typescript-eslint/eslint-plugin": "^8.15.0",
 		"@typescript-eslint/parser": "^8.15.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.179",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.182",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.15.0",
 		"eslint-import-resolver-typescript": "^3.6.3",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-prefer-let": "^4.0.0",
 		"globify-gitignore": "^1.0.3",
-		"husky": "^9.1.6",
-		"knip": "^5.37.1",
+		"husky": "^9.1.7",
+		"knip": "^5.37.2",
 		"lightningcss": "^1.28.1",
 		"lint-staged": "^15.2.10",
 		"micromatch": "^4.0.8",
 		"prettier": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.8",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"tailwindcss": "4.0.0-beta.2",
-		"typescript": "^5.6.3",
+		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.15.0",
 		"vite": "^5.4.11"
 	},
