--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
 		"format": "node ./scripts/cli.js format",
 		"validate": "pnpm run --recursive lint format typecheck",
 		"prepare": "node ./scripts/prepare.js",
-		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
-		"start": "cross-env NODE_ENV=production node ./server.js",
+		"_:server": "node --no-warnings --experimental-strip-types --experimental-transform-types ./server.ts",
+		"dev": "cross-env NODE_ENV=development node --run _:server",
+		"start": "cross-env NODE_ENV=production node --run _:server",
 		"knip": "knip-bun"
 	},
 	"dependencies": {
@@ -87,7 +88,7 @@
 		}
 	},
 	"engines": {
-		"node": ">=18"
+		"node": ">=22"
 	},
-	"packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
+	"packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
 }
