--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"knip": "knip-bun"
 	},
 	"dependencies": {
-		"@mcansh/http-helmet": "^0.11.1",
+		"@mcansh/http-helmet": "https://pkg.pr.new/@mcansh/http-helmet@173",
 		"@mcansh/remix-fastify": "^4.0.3",
 		"@react-router/node": "7.0.1",
 		"address": "^2.0.3",
