--- a/package.json
+++ b/package.json
@@ -1,93 +1,93 @@
 {
-  "name": "personal-website",
-  "private": true,
-  "repository": "https://github.com/mcansh/mcan.sh",
-  "homepage": "https://mcan.sh",
-  "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
-  "license": "MIT",
-  "sideEffects": false,
-  "type": "module",
-  "imports": {
-    "#*": "./*"
-  },
-  "scripts": {
-    "build": "npm run typecheck && react-router build",
-    "clean": "./scripts/clean.js",
-    "typecheck": "node ./scripts/cli.js typecheck",
-    "lint": "node ./scripts/cli.js lint",
-    "format": "node ./scripts/cli.js format",
-    "validate": "pnpm run --recursive lint format typecheck",
-    "prepare": "node ./scripts/prepare.js",
-    "dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
-    "start": "cross-env NODE_ENV=production node ./server.js",
-    "knip": "knip-bun"
-  },
-  "dependencies": {
-    "@mcansh/http-helmet": "https://pkg.pr.new/@mcansh/http-helmet@173",
-    "@mcansh/remix-fastify": "^4.0.3",
-    "@react-router/node": "7.0.1",
-    "address": "^2.0.3",
-    "cloudinary-build-url": "^0.2.4",
-    "clsx": "^2.1.1",
-    "cross-env": "^7.0.3",
-    "etag": "^1.8.1",
-    "fastify": "^5.1.0",
-    "fathom-client": "^3.7.2",
-    "get-port": "^7.1.0",
-    "isbot": "^5.1.17",
-    "playwright": "^1.49.0",
-    "pretty-cache-header": "^1.0.0",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
-    "react-router": "7.0.1",
-    "remix-utils": "^7.7.0",
-    "tailwind-merge": "^2.5.5",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@cld-apis/types": "^0.1.6",
-    "@eslint/compat": "^1.2.3",
-    "@eslint/js": "^9.15.0",
-    "@mcansh/vite-plugin-svg-sprite": "^0.5.0",
-    "@react-router/dev": "7.0.1",
-    "@tailwindcss/vite": "4.0.0-beta.2",
-    "@total-typescript/tsconfig": "^1.0.4",
-    "@types/eslint__js": "^8.42.3",
-    "@types/etag": "^1.8.3",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.183",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prefer-let": "^4.0.0",
-    "globify-gitignore": "^1.0.3",
-    "husky": "^9.1.7",
-    "knip": "^5.38.1",
-    "lightningcss": "^1.28.2",
-    "lint-staged": "^15.2.10",
-    "micromatch": "^4.0.8",
-    "prettier": "^3.4.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "4.0.0-beta.2",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.16.0",
-    "vite": "^6.0.1"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "$@types/react",
-      "@types/react-dom": "$@types/react-dom",
-      "react": "$react",
-      "react-dom": "$react-dom",
-      "react-router-dom": "$react-router"
-    }
-  },
-  "engines": {
-    "node": ">=22"
-  },
-  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
+	"name": "personal-website",
+	"private": true,
+	"repository": "https://github.com/mcansh/mcan.sh",
+	"homepage": "https://mcan.sh",
+	"author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
+	"license": "MIT",
+	"sideEffects": false,
+	"type": "module",
+	"imports": {
+		"#*": "./*"
+	},
+	"scripts": {
+		"build": "npm run typecheck && react-router build",
+		"clean": "./scripts/clean.js",
+		"typecheck": "node ./scripts/cli.js typecheck",
+		"lint": "node ./scripts/cli.js lint",
+		"format": "node ./scripts/cli.js format",
+		"validate": "pnpm run --recursive lint format typecheck",
+		"prepare": "node ./scripts/prepare.js",
+		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
+		"start": "cross-env NODE_ENV=production node ./server.js",
+		"knip": "knip-bun"
+	},
+	"dependencies": {
+		"@mcansh/http-helmet": "^0.11.2",
+		"@mcansh/remix-fastify": "^4.0.3",
+		"@react-router/node": "7.0.1",
+		"address": "^2.0.3",
+		"cloudinary-build-url": "^0.2.4",
+		"clsx": "^2.1.1",
+		"cross-env": "^7.0.3",
+		"etag": "^1.8.1",
+		"fastify": "^5.1.0",
+		"fathom-client": "^3.7.2",
+		"get-port": "^7.1.0",
+		"isbot": "^5.1.17",
+		"playwright": "^1.49.0",
+		"pretty-cache-header": "^1.0.0",
+		"react": "19.0.0-rc.1",
+		"react-dom": "19.0.0-rc.1",
+		"react-router": "7.0.1",
+		"remix-utils": "^7.7.0",
+		"tailwind-merge": "^2.5.5",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@cld-apis/types": "^0.1.6",
+		"@eslint/compat": "^1.2.3",
+		"@eslint/js": "^9.15.0",
+		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
+		"@react-router/dev": "7.0.1",
+		"@tailwindcss/vite": "4.0.0-beta.2",
+		"@total-typescript/tsconfig": "^1.0.4",
+		"@types/eslint__js": "^8.42.3",
+		"@types/etag": "^1.8.3",
+		"@types/react": "npm:types-react@19.0.0-rc.1",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"@typescript-eslint/eslint-plugin": "^8.16.0",
+		"@typescript-eslint/parser": "^8.16.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.183",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.15.0",
+		"eslint-import-resolver-typescript": "^3.6.3",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-prefer-let": "^4.0.0",
+		"globify-gitignore": "^1.0.3",
+		"husky": "^9.1.7",
+		"knip": "^5.38.1",
+		"lightningcss": "^1.28.2",
+		"lint-staged": "^15.2.10",
+		"micromatch": "^4.0.8",
+		"prettier": "^3.4.1",
+		"prettier-plugin-tailwindcss": "^0.6.9",
+		"tailwindcss": "4.0.0-beta.2",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.16.0",
+		"vite": "^6.0.1"
+	},
+	"pnpm": {
+		"overrides": {
+			"@types/react": "$@types/react",
+			"@types/react-dom": "$@types/react-dom",
+			"react": "$react",
+			"react-dom": "$react-dom",
+			"react-router-dom": "$react-router"
+		}
+	},
+	"engines": {
+		"node": ">=22"
+	},
+	"packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
 }
