--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"typecheck": "node ./scripts/cli.js typecheck",
 		"lint": "node ./scripts/cli.js lint",
 		"format": "node ./scripts/cli.js format",
-		"validate": "pnpm run --recursive lint format typecheck",
+		"validate": "node ./scripts/cli.js validate",
 		"prepare": "node ./scripts/prepare.js",
 		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
 		"start": "cross-env NODE_ENV=production node ./server.js",
@@ -25,7 +25,7 @@
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.12.0",
 		"@mcansh/remix-fastify": "^4.0.3",
-		"@react-router/node": "7.0.1",
+		"@react-router/node": "7.0.2",
 		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
@@ -39,43 +39,49 @@
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0-rc.1",
 		"react-dom": "19.0.0-rc.1",
-		"react-router": "7.0.1",
+		"react-router": "7.0.2",
 		"remix-utils": "^7.7.0",
 		"tailwind-merge": "^2.5.5",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@eslint/compat": "^1.2.3",
+		"@eslint/compat": "^1.2.4",
 		"@eslint/js": "^9.16.0",
 		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
-		"@react-router/dev": "7.0.1",
-		"@tailwindcss/vite": "4.0.0-beta.2",
+		"@react-router/dev": "7.0.2",
+		"@tailwindcss/vite": "4.0.0-beta.5",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/eslint__js": "^8.42.3",
 		"@types/etag": "^1.8.3",
 		"@types/react": "npm:types-react@19.0.0-rc.1",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-		"@typescript-eslint/eslint-plugin": "^8.16.0",
-		"@typescript-eslint/parser": "^8.16.0",
+		"@typescript-eslint/eslint-plugin": "^8.17.0",
+		"@typescript-eslint/parser": "^8.17.0",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.185",
 		"autoprefixer": "^10.4.20",
+		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
+		"cross-spawn": "^7.0.6",
 		"eslint": "^9.16.0",
-		"eslint-import-resolver-typescript": "^3.6.3",
+		"eslint-import-resolver-typescript": "^3.7.0",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-prefer-let": "^4.0.0",
+		"eslint-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"globify-gitignore": "^1.0.3",
 		"husky": "^9.1.7",
-		"knip": "^5.38.3",
+		"knip": "^5.39.2",
 		"lightningcss": "^1.28.2",
 		"lint-staged": "^15.2.10",
 		"micromatch": "^4.0.8",
-		"prettier": "^3.4.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"tailwindcss": "4.0.0-beta.2",
+		"react-compiler-runtime": "19.0.0-beta-df7b47d-20241124",
+		"tailwindcss": "4.0.0-beta.5",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.16.0",
-		"vite": "^6.0.1"
+		"typescript-eslint": "^8.17.0",
+		"vite": "^6.0.2",
+		"vite-plugin-babel": "^1.3.0"
 	},
 	"pnpm": {
 		"overrides": {
