--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"react": "19.0.0-rc.1",
 		"react-dom": "19.0.0-rc.1",
 		"react-router": "7.0.2",
+		"react-scan": "^0.0.35",
 		"remix-utils": "^7.7.0",
 		"tailwind-merge": "^2.5.5",
 		"zod": "^3.23.8"
