--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
 		"isbot": "^5.1.17",
 		"playwright": "^1.49.0",
 		"pretty-cache-header": "^1.0.0",
-		"react": "19.0.0-rc.1",
-		"react-dom": "19.0.0-rc.1",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
 		"react-router": "7.0.2",
 		"react-scan": "^0.0.35",
 		"remix-utils": "^7.7.0",
@@ -55,8 +55,8 @@
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/eslint__js": "^8.42.3",
 		"@types/etag": "^1.8.3",
-		"@types/react": "npm:types-react@19.0.0-rc.1",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"@types/react": "19.0.0",
+		"@types/react-dom": "19.0.0",
 		"@typescript-eslint/eslint-plugin": "^8.17.0",
 		"@typescript-eslint/parser": "^8.17.0",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.185",
