--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"prepare": "node ./scripts/prepare.js",
 		"dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
 		"start": "cross-env NODE_ENV=production node ./server.js",
+		"start:local": "cross-env NODE_ENV=production node --env-file=./.env ./server.js",
 		"knip": "knip-bun"
 	},
 	"dependencies": {
