--- a/package.json
+++ b/package.json
@@ -24,74 +24,69 @@
 		"knip": "knip-bun"
 	},
 	"dependencies": {
-		"@mcansh/http-helmet": "^0.12.0",
+		"@mcansh/http-helmet": "^0.12.1",
 		"@mcansh/remix-fastify": "^4.0.3",
-		"@react-router/node": "7.0.2",
+		"@react-router/node": "7.1.1",
 		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"etag": "^1.8.1",
-		"fastify": "^5.1.0",
+		"fastify": "^5.2.0",
 		"fathom-client": "^3.7.2",
 		"get-port": "^7.1.0",
-		"isbot": "^5.1.17",
-		"playwright": "^1.49.0",
+		"isbot": "^5.1.19",
 		"pretty-cache-header": "^1.0.0",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
-		"react-router": "7.0.2",
-		"react-scan": "^0.0.42",
-		"remix-utils": "^7.7.0",
-		"tailwind-merge": "^2.5.5",
-		"zod": "^3.23.8"
+		"react-router": "7.1.1",
+		"react-router-dom": "7.1.1",
+		"react-scan": "^0.0.54",
+		"remix-utils": "^8.0.0",
+		"tailwind-merge": "^2.6.0",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@eslint/compat": "^1.2.4",
-		"@eslint/js": "^9.16.0",
+		"@eslint/js": "^9.17.0",
 		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
-		"@react-router/dev": "7.0.2",
-		"@tailwindcss/vite": "4.0.0-beta.6",
+		"@react-router/dev": "7.1.1",
+		"@tailwindcss/vite": "4.0.0-beta.8",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/eslint__js": "^8.42.3",
 		"@types/etag": "^1.8.3",
-		"@types/react": "19.0.1",
+		"@types/react": "19.0.2",
 		"@types/react-dom": "19.0.2",
-		"@typescript-eslint/eslint-plugin": "^8.18.0",
-		"@typescript-eslint/parser": "^8.18.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.186",
+		"@typescript-eslint/eslint-plugin": "^8.19.0",
+		"@typescript-eslint/parser": "^8.19.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.188",
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"cross-spawn": "^7.0.6",
-		"eslint": "^9.16.0",
+		"eslint": "^9.17.0",
 		"eslint-import-resolver-typescript": "^3.7.0",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-prefer-let": "^4.0.0",
 		"eslint-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"globify-gitignore": "^1.0.3",
 		"husky": "^9.1.7",
-		"knip": "^5.39.2",
+		"knip": "^5.41.1",
 		"lightningcss": "^1.28.2",
-		"lint-staged": "^15.2.10",
+		"lint-staged": "^15.3.0",
 		"micromatch": "^4.0.8",
 		"prettier": "^3.4.2",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"react-compiler-runtime": "19.0.0-beta-df7b47d-20241124",
-		"tailwindcss": "4.0.0-beta.6",
+		"tailwindcss": "4.0.0-beta.8",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.18.0",
-		"vite": "^6.0.3",
+		"typescript-eslint": "^8.19.0",
+		"vite": "^6.0.6",
 		"vite-plugin-babel": "^1.3.0"
-	},
-	"pnpm": {
-		"overrides": {
-			"react-router-dom": "$react-router"
-		}
 	},
 	"engines": {
 		"node": ">=22"
 	},
-	"packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
+	"packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
 }
