feat: add sentry
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
 		"@mcansh/http-helmet": "^0.12.1",
 		"@mcansh/remix-fastify": "^4.0.3",
 		"@react-router/node": "7.1.1",
+		"@sentry/node": "^8.48.0",
+		"@sentry/profiling-node": "^8.48.0",
+		"@sentry/react": "^8.48.0",
+		"@sentry/vite-plugin": "^2.23.0",
 		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.1.1",
