--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.13.0",
-		"@mcansh/remix-fastify": "^4.0.4",
+		"@mcansh/remix-fastify": "^4.0.5",
 		"@react-router/node": "7.1.5",
 		"address": "^2.0.3",
 		"cloudinary-build-url": "^0.2.4",
@@ -44,7 +44,7 @@
 		"react-scan": "^0.1.3",
 		"remix-utils": "^8.1.0",
 		"tailwind-merge": "^3.0.1",
-		"zod": "^3.24.1"
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
@@ -52,41 +52,41 @@
 		"@eslint/js": "^9.20.0",
 		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
 		"@react-router/dev": "7.1.5",
-		"@tailwindcss/vite": "4.0.4",
+		"@tailwindcss/vite": "4.0.6",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/eslint__js": "^8.42.3",
 		"@types/etag": "^1.8.3",
 		"@types/react": "19.0.8",
 		"@types/react-dom": "19.0.3",
-		"@typescript-eslint/eslint-plugin": "^8.23.0",
-		"@typescript-eslint/parser": "^8.23.0",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.201",
+		"@typescript-eslint/eslint-plugin": "^8.24.0",
+		"@typescript-eslint/parser": "^8.24.0",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.202",
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"cross-spawn": "^7.0.6",
-		"eslint": "^9.20.0",
+		"eslint": "^9.20.1",
 		"eslint-import-resolver-typescript": "^3.7.0",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-prefer-let": "^4.0.0",
 		"eslint-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"globify-gitignore": "^1.0.3",
 		"husky": "^9.1.7",
-		"knip": "^5.43.6",
+		"knip": "^5.44.1",
 		"lightningcss": "^1.29.1",
 		"lint-staged": "^15.4.3",
 		"micromatch": "^4.0.8",
-		"prettier": "^3.4.2",
+		"prettier": "^3.5.0",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"react-compiler-runtime": "19.0.0-beta-df7b47d-20241124",
-		"tailwindcss": "4.0.4",
+		"react-compiler-runtime": "19.0.0-beta-30d8a17-20250209",
+		"tailwindcss": "4.0.6",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.23.0",
+		"typescript-eslint": "^8.24.0",
 		"vite": "^6.1.0",
 		"vite-plugin-babel": "^1.3.0"
 	},
 	"engines": {
 		"node": ">=22"
 	},
-	"packageManager": "pnpm@10.2.1+sha512.398035c7bd696d0ba0b10a688ed558285329d27ea994804a52bad9167d8e3a72bcb993f9699585d3ca25779ac64949ef422757a6c31102c12ab932e5cbe5cc92"
+	"packageManager": "pnpm@10.3.0"
 }
