--- a/package.json
+++ b/package.json
@@ -48,39 +48,42 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@eslint/compat": "^1.2.6",
-		"@eslint/js": "^9.20.0",
+		"@eslint/compat": "^1.2.7",
+		"@eslint/js": "^9.21.0",
 		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
 		"@react-router/dev": "7.2.0",
-		"@tailwindcss/vite": "4.0.7",
+		"@tailwindcss/vite": "4.0.8",
 		"@total-typescript/tsconfig": "^1.0.4",
-		"@types/eslint__js": "^8.42.3",
 		"@types/etag": "^1.8.3",
 		"@types/react": "19.0.10",
 		"@types/react-dom": "19.0.4",
 		"@typescript-eslint/eslint-plugin": "^8.24.1",
 		"@typescript-eslint/parser": "^8.24.1",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.202",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.205",
 		"autoprefixer": "^10.4.20",
 		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"cross-spawn": "^7.0.6",
-		"eslint": "^9.20.1",
-		"eslint-import-resolver-typescript": "^3.8.2",
+		"eslint": "^9.21.0",
+		"eslint-import-resolver-typescript": "^3.8.3",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-prefer-let": "^4.0.0",
 		"eslint-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
+		"fs-extra": "^11.3.0",
 		"globify-gitignore": "^1.0.3",
+		"hasha": "^6.0.0",
 		"husky": "^9.1.7",
 		"knip": "^5.44.4",
 		"lightningcss": "^1.29.1",
 		"lint-staged": "^15.4.3",
 		"micromatch": "^4.0.8",
-		"prettier": "^3.5.1",
+		"prettier": "^3.5.2",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"react-compiler-runtime": "19.0.0-beta-30d8a17-20250209",
-		"tailwindcss": "4.0.7",
-		"typescript": "^5.7.3",
+		"svgo": "^3.3.2",
+		"svgstore": "^3.0.1",
+		"tailwindcss": "4.0.8",
+		"typescript": "5.8.1-rc",
 		"typescript-eslint": "^8.24.1",
 		"vite": "^6.1.1",
 		"vite-plugin-babel": "^1.3.0"
@@ -88,5 +91,5 @@
 	"engines": {
 		"node": ">=22"
 	},
-	"packageManager": "pnpm@10.3.0"
+	"packageManager": "pnpm@10.4.1"
 }
