--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"@cld-apis/types": "^0.1.6",
 		"@eslint/compat": "^1.2.7",
 		"@eslint/js": "^9.21.0",
-		"@mcansh/vite-plugin-svg-sprite": "^0.5.0",
+		"@mcansh/vite-plugin-svg-sprite": "file:.yalc/@mcansh/vite-plugin-svg-sprite",
 		"@react-router/dev": "7.2.0",
 		"@tailwindcss/vite": "4.0.8",
 		"@total-typescript/tsconfig": "^1.0.4",
