--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+	"schema": "https://json.schemastore.org/tsconfig",
 	"extends": "@total-typescript/tsconfig/bundler/dom/app",
 	"include": [
 		"**/*.ts",
@@ -9,6 +10,7 @@
 		"**/.client/**/*.tsx"
 	],
 	"compilerOptions": {
+		"erasableSyntaxOnly": true,
 		"types": [
 			"@react-router/node",
 			"vite/client",
