chore(deps): bump to latest, add middleware
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 		"types": [
 			"@react-router/node",
 			"vite/client",
-			"@mcansh/vite-plugin-svg-sprite/client"
+			"@mcansh/vite-plugin-svg-sprite/client",
+			"@mcansh/remix-fastify/middleware"
 		],
 		"forceConsistentCasingInFileNames": true,
 		"checkJs": true,
