--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "dependencies": {
     "@mcansh/http-helmet": "^0.13.0",
-    "@mcansh/remix-fastify": "^4.0.6",
-    "@react-router/node": "7.2.0",
+    "@mcansh/remix-fastify": "https://pkg.pr.new/@mcansh/remix-fastify@502",
+    "@react-router/node": "7.3.0",
     "address": "^2.0.3",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
@@ -39,54 +39,54 @@
     "pretty-cache-header": "^1.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "7.2.0",
-    "react-router-dom": "7.2.0",
-    "react-scan": "^0.1.3",
-    "remix-utils": "^8.1.0",
-    "tailwind-merge": "^3.0.1",
+    "react-router": "7.3.0",
+    "react-router-dom": "7.3.0",
+    "react-scan": "^0.2.14",
+    "remix-utils": "^8.2.0",
+    "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
-    "@eslint/compat": "^1.2.6",
-    "@eslint/js": "^9.20.0",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/js": "^9.22.0",
     "@mcansh/vite-plugin-svg-sprite": "^0.5.0",
-    "@react-router/dev": "7.2.0",
-    "@tailwindcss/vite": "4.0.7",
+    "@react-router/dev": "7.3.0",
+    "@tailwindcss/vite": "4.0.12",
     "@total-typescript/tsconfig": "^1.0.4",
-    "@types/eslint__js": "^8.42.3",
+    "@types/eslint__js": "^9.14.0",
     "@types/etag": "^1.8.3",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.202",
-    "autoprefixer": "^10.4.20",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.209",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
-    "eslint": "^9.20.1",
-    "eslint-import-resolver-typescript": "^3.8.2",
+    "eslint": "^9.22.0",
+    "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prefer-let": "^4.0.0",
     "eslint-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
     "globify-gitignore": "^1.0.3",
     "husky": "^9.1.7",
-    "knip": "^5.44.4",
-    "lightningcss": "^1.29.1",
+    "knip": "^5.45.0",
+    "lightningcss": "^1.29.2",
     "lint-staged": "^15.4.3",
     "micromatch": "^4.0.8",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "react-compiler-runtime": "19.0.0-beta-30d8a17-20250209",
-    "tailwindcss": "4.0.7",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.1.1",
+    "react-compiler-runtime": "19.0.0-beta-40c6c23-20250301",
+    "tailwindcss": "4.0.12",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
+    "vite": "^6.2.1",
     "vite-plugin-babel": "^1.3.0",
-    "zx": "^8.3.2"
+    "zx": "^8.4.0"
   },
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
+  "packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b"
 }
