chore: patch vite plugin to look into server/client dirs
in actual plugin, create a map based on env

Signed-off-by: GitHub <noreply@github.com>

--- a/package.json
+++ b/package.json
@@ -95,6 +95,9 @@
       "cookie@<0.7.0": ">=0.7.0",
       "esbuild@<=0.24.2": ">=0.25.0",
       "axios@<0.30.0": ">=0.30.0"
+    },
+    "patchedDependencies": {
+      "@mcansh/vite-plugin-svg-sprite": "patches/@mcansh__vite-plugin-svg-sprite.patch"
     }
   }
 }
