feat: migrate to Cloudflare Workers and update build tooling
- Remove Fastify server and related dependencies
- Add Cloudflare Workers entrypoint and wrangler config
- Update scripts and typechecking for Cloudflare
- Switch to @cloudflare/vite-plugin in Vite config
- Refactor tsconfig for multi-target (node, cloudflare)
- Clean up .gitignore and dependencies

Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
 /node_modules/
 *.log
 .DS_Store
-/.cache/
 /build/
-/public/build/
-.eslintcache
-tsconfig.tsbuildinfo
+*.tsbuildinfo
 .env
+sonda-report.html
 
 yalc.lock
-.yalc
+/.yalc/
 
-.react-router
-.idea
+# React Router
+/.react-router/
 
-sonda-report.html
+# Cloudflare
+.mf
+.wrangler
+.dev.vars*
