--- a/package.json
+++ b/package.json
@@ -12,29 +12,24 @@
   },
   "scripts": {
     "build": "npm run typecheck && vite build",
-    "clean": "./scripts/clean.js",
+    "cf-typegen": "wrangler types",
+    "deploy": "node --run build && wrangler deploy",
+    "dev": "vite dev",
+    "postinstall": "npm run cf-typegen",
+    "preview": "npm run build && vite preview",
     "typecheck": "node ./scripts/cli.js typecheck",
+    "clean": "./scripts/clean.js",
     "lint": "node ./scripts/cli.js lint",
     "format": "node ./scripts/cli.js format",
     "validate": "node ./scripts/cli.js validate",
     "prepare": "node ./scripts/prepare.js",
-    "dev": "cross-env NODE_ENV=development node --watch-path ./server.js ./server.js",
-    "start": "cross-env NODE_ENV=production node ./server.js",
-    "start:local": "cross-env NODE_ENV=production node --env-file=./.env ./server.js",
     "knip": "knip-bun"
   },
   "dependencies": {
     "@mcansh/http-helmet": "^0.13.0",
-    "@mcansh/remix-fastify": "^4.0.8",
-    "@react-router/node": "7.6.1",
-    "address": "^2.0.3",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
-    "cross-env": "^7.0.3",
-    "etag": "^1.8.1",
-    "fastify": "^5.3.3",
     "fathom-client": "^3.7.2",
-    "get-port": "^7.1.0",
     "isbot": "^5.1.28",
     "pretty-cache-header": "^1.0.0",
     "react": "19.1.0",
@@ -48,20 +43,19 @@
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
+    "@cloudflare/vite-plugin": "^1.0.12",
     "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.28.0",
     "@mcansh/vite-plugin-svg-sprite": "^0.6.0",
     "@react-router/dev": "7.6.1",
     "@tailwindcss/vite": "4.1.8",
     "@total-typescript/tsconfig": "^1.0.4",
-    "@types/etag": "^1.8.3",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
     "@typescript/lib-dom": "npm:@types/web@^0.0.237",
     "@typescript/native-preview": "7.0.0-dev.20250601.1",
-    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "eslint": "^9.28.0",
     "eslint-config-flat-gitignore": "^2.1.0",
@@ -84,6 +78,7 @@
     "typescript-eslint": "^8.33.0",
     "vite": "npm:rolldown-vite@6.3.15",
     "vite-plugin-babel": "^1.3.1",
+    "wrangler": "^4.20.0",
     "zx": "^8.5.4"
   },
   "engines": {
