--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,9 @@ onlyBuiltDependencies:
   - "@tailwindcss/oxide"
   - esbuild
   - husky
+  - sharp
   - unrs-resolver
+  - workerd
 overrides:
   axios@>=0.8.1 <0.28.0: ">=0.28.0"
   rollup@<2.79.2: ">=2.79.2"
