--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "#*": "./*"
   },
   "scripts": {
-    "build": "npm run typecheck && vite build",
+    "build": "vite build",
     "cf-typegen": "wrangler types",
     "deploy": "node --run build && wrangler deploy",
     "dev": "vite dev",
