chore: re-add nodejs_compat
Signed-off-by: GitHub <noreply@github.com>

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,7 +6,10 @@
 	"vars": {
 		"VALUE_FROM_CLOUDFLARE": "Hello from Cloudflare",
 	},
-	"compatibility_flags": ["nodejs_compat_populate_process_env"],
+	"compatibility_flags": [
+		"nodejs_compat",
+		"nodejs_compat_populate_process_env",
+	],
 	"placement": { "mode": "smart" },
 	"upload_source_maps": true,
 	"observability": {
