chore: enable preview_urls

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,6 +12,7 @@
 	],
 	"placement": { "mode": "smart" },
 	"upload_source_maps": true,
+	"preview_urls": true,
 	"observability": {
 		"enabled": true,
 	},
